# anchor-backend

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: backend.yml  ghcr.yml
alembic/: env.py
alembic/versions/: 0001_phase0.py  0002_phase1.py  0003_phase2.py  0004_phase3.py  0005_phase4.py  0006_phase5.py
app/: main.py
app/api/: health.py
app/core/: audit.py  config.py  db.py  deps.py  encryption.py  key_gen.py  middleware.py  rate_limit.py  sdk_auth.py  sdk_device.py  security.py
app/db/: seed.py
app/models/: __init__.py  announcement.py  announcement_view.py  api_key.py  app_version.py  audit_log.py  banner.py  banner_impression.py  config_entry.py  config_override.py  crash_group.py  crash_report.py  deep_link.py  device.py  event.py  experiment.py  experiment_assignment.py  experiment_variant.py  legal_acceptance.py  legal_document.py  localization.py  maintenance_window.py  onboarding_flow.py  onboarding_slide.py  org_invitation.py  org_member.py  organization.py  project.py  push_campaign.py  push_credential.py  rating_event.py  rating_rule.py  support_conversation.py  support_message.py  user.py  version_policy.py
app/schemas/: announcement.py  api_key.py  (+22 more)
docker/: Dockerfile  Dockerfile.worker
scripts/: backup.sh  restore.sh  send_test_push.py
tests/: conftest.py  test_analytics.py  test_auth.py  test_banners.py  test_config.py  test_handshake.py  test_health.py  test_invitations.py  test_localization.py  test_orgs.py  test_push.py  test_versions.py
(+48 files in other folders)
